--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -25,4 +25,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: zig-latest-macOS
-          path: artifacts
+          path: build/artifacts
